feat: More fields from custom data added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
           appendMessageAndSend(null, {
             action: document.getElementById('input-action-event').value,
             message: document.getElementById('input-message-event').value,
+            tipo_flujo: document.getElementById('input-flowType-event').value,
+            paso_flujo: document.getElementById('input-flowPath-event').value,
+            motivo_soporte: document.getElementById('input-supportMotive-event').value,
             data: data
           });
         });
@@ -245,6 +248,18 @@
       <div style="margin-bottom: 10px">
         <label for="message">Event Message:</label>
         <input type="text" name="message" id="input-message-event" placeholder="Message" value="" />
+      </div>
+      <div style="margin-bottom: 10px">
+        <label for="message">Flow Type:</label>
+        <input type="text" name="message" id="input-flowType-event" placeholder="Flow Type" value="" />
+      </div>
+      <div style="margin-bottom: 10px">
+        <label for="message">Flow Path:</label>
+        <input type="text" name="message" id="input-flowPath-event" placeholder="Flow Path" value="" />
+      </div>
+      <div style="margin-bottom: 10px">
+        <label for="message">Support Motive:</label>
+        <input type="text" name="message" id="input-supportMotive-event" placeholder="Support Motive" value="" />
       </div>
       <div style="margin-bottom: 10px">
         <label for="body">Event Body:</label>
